// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xlf rendering handles {% includes ... %} 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with anchors syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>заголовок без явного якоря</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>параграф</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>заголовок с явным якорем</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with checkbox syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>первый</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>второй</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>надо сделать подчёркивание</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>надо сделать тире</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>надо сделать пробел</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>сделано крестик</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>сделано крестик заглавный</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>элемент листа</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>сделан</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>надо сделaть</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with cuts 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Заголовок Ката</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Контент внутри ката</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with file syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>файлик.zip</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>текст</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>файлик2.zip</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with gfm tables 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Заголовок 1</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Заголовок 2</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>текст ссылки</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>жирный текст</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>текст картинки</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>подсказка</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>курсив</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with imsize syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>параграф с</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>картинкой внутри</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>альт текст</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>с указанной шириной и высотой</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with liquid conditionals 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Document Title</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Download the app from the</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>{{ ios-marketplace }} Store</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>.</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Download the app from</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>{{ other-marketplace }} Store</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>.</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>Some text</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>Apple</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>Android</source>
      </trans-unit>
      <trans-unit id=\\"11\\">
        <source>text continued.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with liquid filters 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Document Title</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Hello {{ user.name | capitalize }}!</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>total number of users: {{ users | length }}</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with liquid functions 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Document Title</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Hello P{{ user.name.slice(1) }}!</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Hello P{{ user.name.slice(1, 2) }}vel!</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with liquid loops 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Document Title</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Some text {{ variable_name }} text continued.</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>before inline loop</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>text inside with {{variable}}</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>after inline loop</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with liquid variables 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>{{ service-name }} Service</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Try out {{ service-name }} and let us know what you think</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Also check out</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>{{ other-service-name }}</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>{{ other-service-name }} description</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>{{ service-name }} usage screenshot</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>{{ service-name }} in action</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with meta 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Создание виртуальной машины Windows</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Cоздайте виртуальную машину Windows в облаке с помощью сервиса {{ compute-short-name }}.</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Вы можете подключиться к виртуальной машине Windows используя Remote Dektop Protocol (RDP), встроенный в образ ОС.</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Перед подключением к виртуальной машине Windows убедитесь, что NLA включен в настройках вашего компьютера.</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Sammy Sosa
      Let&apos;s Goooo</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>windows</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>windows vm</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>windows вм</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>windows виртуальная машина</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>виртуальная машина</source>
      </trans-unit>
      <trans-unit id=\\"11\\">
        <source>вм</source>
      </trans-unit>
      <trans-unit id=\\"12\\">
        <source>Mark</source>
      </trans-unit>
      <trans-unit id=\\"13\\">
        <source>Noam</source>
      </trans-unit>
      <trans-unit id=\\"14\\">
        <source>John Smith</source>
      </trans-unit>
      <trans-unit id=\\"15\\">
        <source>milk</source>
      </trans-unit>
      <trans-unit id=\\"16\\">
        <source>pumpkin pie</source>
      </trans-unit>
      <trans-unit id=\\"17\\">
        <source>eggs</source>
      </trans-unit>
      <trans-unit id=\\"18\\">
        <source>juice</source>
      </trans-unit>
      <trans-unit id=\\"19\\">
        <source>Mark McGwire</source>
      </trans-unit>
      <trans-unit id=\\"20\\">
        <source>Sammy Sosa</source>
      </trans-unit>
      <trans-unit id=\\"21\\">
        <source>bob</source>
      </trans-unit>
      <trans-unit id=\\"22\\">
        <source>marry</source>
      </trans-unit>
      <trans-unit id=\\"23\\">
        <source>Мета</source>
      </trans-unit>
      <trans-unit id=\\"24\\">
        <source>Комментарии и метаданные — это элементы разметки, которые не отображаются в собранном файле.</source>
      </trans-unit>
      <trans-unit id=\\"25\\">
        <source>Они используются, чтобы хранить в исходном тексте информацию для SEO или авторов документа.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with monospace syntax inside 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>моноспейс</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>вот</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>это</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>моно</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>спейс</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>хе</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>хе</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>хе</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>привет</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>мир</source>
      </trans-unit>
      <trans-unit id=\\"11\\">
        <source>мне</source>
      </trans-unit>
      <trans-unit id=\\"12\\">
        <source>хорошо</source>
      </trans-unit>
      <trans-unit id=\\"13\\">
        <source>подсказка</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with multiline tables syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Первый Заголовок</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Второй Заголовок</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>текст первой колонки</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>текст второй колонки</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>текст перед таблицей</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>Первый Заголовок</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>Второй Заголовок</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>текст первой колонки</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>текст второй колонки</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>текст после таблицы</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with notes 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Информация</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>информация</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>список с запиской</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Предупреждение</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>предупреждение</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with ref links({#T}) syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>параграф содержащий реф ссылку</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>титул</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>продолжение предложения.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with strikethrough syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>перечеркнуто</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>привет</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>мир</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>мне</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>хорошо</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>подсказка</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with sup syntax inside 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>параграф текста, 1</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>ая</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>строчка</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>это 2</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>ая</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>строчка</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>1</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>ая</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>ссылка в параграфе</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with tabs syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Первый Таб</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Текст первого таба</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>список внутри таба</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>контент внутри списка</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Второй Таб</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>Текст второго таба</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with video syntax 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>текст после</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering renders empty xlf document for empty markdown 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering renders trans-units from text tokens 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Заголовок 1</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Параграф</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Первый элемент списка</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Второй элемент списка</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Заголовок 2</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>Параграф содержащий</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>жирный текст</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>и</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>курсив</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>А ещё ключевые особенности структуры проекта освещают чрезвычайно интересные особенности картины в целом.</source>
      </trans-unit>
      <trans-unit id=\\"11\\">
        <source>Предложения складываются в абзацы — и вы наслаждетесь очередным бредошедевром.</source>
      </trans-unit>
      <trans-unit id=\\"12\\">
        <source>текст внутри цитаты</source>
      </trans-unit>
      <trans-unit id=\\"13\\">
        <source>Первый элемент нумерованного списка</source>
      </trans-unit>
      <trans-unit id=\\"14\\">
        <source>Второй элемент нумерованного списка</source>
      </trans-unit>
      <trans-unit id=\\"15\\">
        <source>Текст ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"16\\">
        <source>Всё ещё текст ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"17\\">
        <source>Описание ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"18\\">
        <source>Всё ещё описание ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"19\\">
        <source>Альтернативный текст картинки.</source>
      </trans-unit>
      <trans-unit id=\\"20\\">
        <source>Всё ещё альт. текст картинки.</source>
      </trans-unit>
      <trans-unit id=\\"21\\">
        <source>Титул картинки.</source>
      </trans-unit>
      <trans-unit id=\\"22\\">
        <source>Всё ещё титул картинки.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;
